<resources>
    <string name="app_name">Compensa</string>
    <string name="cadastro_de_produto">Cadastro de Produto</string>
    <string name="descricao_do_produto">Descrição do Produto</string>
    <string name="preco_reais">R$ 0,00</string>
    <string name="quantidade">Quantidade</string>
    <string name="unidade">Unidade</string>
    <string name="pacote">Pacote</string>
    <string name="setor">Setor</string>
    <string name="favorito">Favorito</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="preco">Preço</string>
    <string name="total">Total</string>
    <string name="selecione_setor_produto">Selecione o Setor do Produto</string>
    <string name="minimo_tres_caracteres">deve conter no mínimo três caracteres</string>
    <string name="produto_cadastrado">Produto cadastrado com sucesso!</string>
    <string name="higiene_limpeza_setor">Higiene e limpeza</string>
    <string name="hortifruti_setor">Frutas, verduras e legumes</string>
    <string name="mercearia_setor">Mercearia</string>
    <string name="padaria_setor">Padaria</string>
    <string name="enlatados_setor">Enlatados</string>
    <string name="cereais_setor">Cereais</string>
    <string name="rotisseria_setor">Rotisseria</string>
    <string name="acougue_setor">Açougue</string>
    <string name="frios_laticinios_setor">Frios e laticínios</string>
    <string name="adega_bebida_setor">Adega e bebidas</string>
    <string name="congelados_setor">Congelados</string>
    <string name="maximo_cem_caracteres">deve contér o tamanho máximo de 100 caracteres</string>
    <string name="quntidade_limite_999">Limite de produtos são de 999 itens</string>
    <string name="selecione_unidade_medida">Selecione uma unidade de medida</string>
    <string name="zero">0</string>
</resources>